RESOLVED FIXED30908
[GTK] Spell Check Suggestions (Do not work)
https://bugs.webkit.org/show_bug.cgi?id=30908
Summary [GTK] Spell Check Suggestions (Do not work)
Matthew
Reported 2009-10-29 08:43:20 PDT
Currently I am using midori-git with webkit 1.1.15.3. I am also compiling the nightly build, r50235, as I am posting this. However, I doubt this build will solve the issue, as the issue has existed for at least a year now. Currently, misspelled words are underline with a red squiggly line. If you right click on the word a menu shows up with undo, redo, cut, copy paste, select all, spelling + grammar, and input methods. If I highlight/select the word and right click, I get the menu I just described with spelling suggestions at the top. However, any selection I pick will cause the highlighted word to get deleted. Let me know if you need any additional information and if there is anyway I can help resolve the issue. Thank you!
Attachments
Implement 'title' in ContextMenuItemGtk (2.03 KB, patch)
2009-12-19 03:52 PST, Christian Dywan
eric: review+
Daniel Michalik
Comment 1 2009-12-09 01:09:09 PST
I confirm this issue. Choosing a suggestion results in the string being removed without the suggestion appearing. I furthermore want to add that I find it very confusing that I have to mark the whole word first. From other browsers, namely the gecko engine, I'm used to just right-clicking a red underlined word to get suggestions immediately. I would prefer this way a lot, right now the spell check suggestions are just not usable at all.
Christian Dywan
Comment 2 2009-12-19 03:52:35 PST
Created attachment 45232 [details] Implement 'title' in ContextMenuItemGtk
WebKit Review Bot
Comment 3 2009-12-19 03:55:11 PST
style-queue ran check-webkit-style on attachment 45232 [details] without any errors.
Matthew
Comment 4 2009-12-19 08:05:08 PST
I compiled the patch against the nightly 52242 tarball and it works wonderfully! Thank you so much!
Eric Seidel (no email)
Comment 5 2009-12-22 15:54:48 PST
Looks OK to me.
Evan Martin
Comment 6 2009-12-23 04:19:59 PST
(In reply to comment #1) > I confirm this issue. Choosing a suggestion results in the string being removed > without the suggestion appearing. I furthermore want to add that I find it very > confusing that I have to mark the whole word first. From other browsers, namely > the gecko engine, I'm used to just right-clicking a red underlined word to get > suggestions immediately. I would prefer this way a lot, right now the spell > check suggestions are just not usable at all. The right click bug is this one: https://bugs.webkit.org/show_bug.cgi?id=32770
Christian Dywan
Comment 7 2009-12-27 10:20:21 PST
2009-12-27 Christian Dywan <christian@twotoasts.de> Reviewed by Eric Seidel. [GTK] Spell Check Suggestions (Do not work) https://bugs.webkit.org/show_bug.cgi?id=30908 * platform/gtk/ContextMenuItemGtk.cpp: (WebCore::ContextMenuItem::ContextMenuItem): (WebCore::ContextMenuItem::title): (WebCore::ContextMenuItem::setTitle): Implement the 'title' member and set the title from the native menu item.
Note You need to log in before you can comment on or make changes to this bug.