2009-12-27  Christian Dywan  <christian@twotoasts.de>

Reviewed by Eric Seidel.

        [GTK] Spell Check Suggestions (Do not work)
        https://bugs.webkit.org/show_bug.cgi?id=30908

        * platform/gtk/ContextMenuItemGtk.cpp:
        (WebCore::ContextMenuItem::ContextMenuItem):
        (WebCore::ContextMenuItem::title):
        (WebCore::ContextMenuItem::setTitle): Implement the 'title' member
        and set the title from the native menu item.

Canonical link: https://commits.webkit.org/43994@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@52581 268f45cc-cd09-0410-ab3c-d52691b4dbfc